<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="blank" />

    <PreferenceCategory
        android:title="@string/pref_title_delay">

        <SwitchPreference
            android:defaultValue="@bool/toggle_delay_switch"
            android:key="toggle_delay_switch"
            android:summary="@string/pref_delay_toggle_summary"
            android:title="@string/pref_delay_toggle"/>

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/delay_time"
            android:inputType="number"
            android:key="delay_time"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_delay_time" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_general">

        <ListPreference
            android:defaultValue="SAMSUNG"
            android:entries="@array/pref_general_brands"
            android:entryValues="@array/brands_values"
            android:key="brand"
            android:title="Device Brand"
            android:summary="@string/pref_general_brand_summary"/>

        <ListPreference
            android:defaultValue="TV"
            android:entries="@array/pref_general_devices"
            android:entryValues="@array/devices_values"
            android:key="device"
            android:title="Device Type"
            android:summary="@string/pref_general_device_summary"
        />

        <!--<ListPreference
            android:defaultValue="REMOTE"
            android:entries="@array/pref_general_themes"
            android:entryValues="@array/themes_values"
            android:key="theme"
            android:title="@string/pref_general_theme" />-->

    </PreferenceCategory>

</PreferenceScreen>